@@ -1,3 +1,8 @@
+2019-03-26 Magnus Hagdorn
+ * piccolo3/client/PiccoloSpectrometer.py: expose list of spectrometers and
+ channels; add callback to get notifications when a value changed
+ * piccolo3/client/PiccoloSysinfo.py: tidy up
+
 2019-03-25 Magnus Hagdorn
  * piccolo3/client/PiccoloBaseClient.py: use singleton class to manage client
    context
